@@ -24,10 +24,18 @@ namespace LHAPDF {
   using namespace boost;
 
 
-  // Boost string handling
+  // String handling
   template <typename T>
   std::string to_str(const T& val) {
-    return lexical_cast<std::string>(val);
+    return lexical_cast<string>(val);
+  }
+  template <typename T>
+  std::string to_str(const std::vector<T>& vec) {
+    string rtn;
+    for (size_t i = 0; i < vec.size(); ++i) {
+      rtn += lexical_cast<string>(vec[i]) + ((i < vec.size()-1) ? "," : "");
+    }
+    return rtn;
   }
 
 
@@ -38,4 +46,50 @@ namespace LHAPDF {
   inline N sqr(const N& x) { return x*x; }
 
   /// @todo Add iszero() & equals(,) functions?
+
+
+  // /// @name Implementation of generic begin/end container identification by traits
+  // /// taken from http://stackoverflow.com/a/9407420/91808 . Needs C++11 (or maybe just C++0x).
+  // //@{
+
+  // #include <type_traits>
+  // //#include "boost/type_traits.hpp"
+
+  // template<typename T>
+  // struct has_const_iterator {
+  // private:
+  //   typedef char                      yes;
+  //   typedef struct { char array[2]; } no;
+  //   template<typename C> static yes test(typename C::const_iterator*);
+  //   template<typename C> static no  test(...);
+  // public:
+  //   static const bool value = sizeof(test<T>(0)) == sizeof(yes);
+  //   typedef T type;
+  // };
+
+  // template <typename T>
+  // struct has_begin_end {
+  //   template<typename C> static char (&f(typename std::enable_if<
+  //     std::is_same<decltype(static_cast<typename C::const_iterator (C::*)() const>(&C::begin)),
+  //     typename C::const_iterator(C::*)() const>::value, void>::type*))[1];
+
+  //   template<typename C> static char (&f(...))[2];
+
+  //   template<typename C> static char (&g(typename std::enable_if<
+  //     std::is_same<decltype(static_cast<typename C::const_iterator (C::*)() const>(&C::end)),
+  //     typename C::const_iterator(C::*)() const>::value, void>::type*))[1];
+
+  //   template<typename C> static char (&g(...))[2];
+
+  //   static bool const beg_value = sizeof(f<T>(0)) == 1;
+  //   static bool const end_value = sizeof(g<T>(0)) == 1;
+  // };
+
+  // template<typename T>
+  // struct is_container
+  //   : std::integral_constant<bool, has_const_iterator<T>::value &&
+  //                            has_begin_end<T>::beg_value && has_begin_end<T>::end_value>
+  // { };
+
+
 }
